# duck-flow

./: Makefile  README.md  pyproject.toml  run-cmds.txt
.devcontainer/: Dockerfile  devcontainer.json
ingestion/: bigquery.py  pipeline.py
